--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   </head>
   <body>
     <div class="container d-flex align-items-center h-100">
-      <div class="raw">
-        <header class="text-center">
+      <div class="row">
+        <header class="text-center col-12">
          <h1 class="text-uppercase"><stong>THE biggest STARTUP EVENT OF THE YEAR</stong></h1>
         </header>
         <div class="buffer col-12"></div>
-        <section class="text-center">
+        <section class="text-center col-12">
          <hr>
          <a href="https://mailchi.mp/99a4dc0a04a1/jcst">
          <button class="btn btn-primary btn-xl">Find out more</button>
