--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div class="container d-flex align-items-center h-100">
-      <div class="row">
+      <div class="flex-row">
         <header class="text-center col-12">
          <h1 class="text-uppercase"><stong>THE biggest STARTUP EVENT OF THE YEAR</stong></h1>
          </header>
